fix long title text wrapping in editable-title component
fix https://github.com/apache/incubator-superset/issues/3628

--- a/superset/assets/stylesheets/superset.less
+++ b/superset/assets/stylesheets/superset.less
@@ -210,6 +210,8 @@ div.widget .slice_container {
 .editable-title input[type="button"] {
     border-color: transparent;
     background: inherit;
+    white-space: normal;
+    text-align: left;
 }
 
 .editable-title input[type="button"]:hover {
